jenkins/topic002/deploy/incluster/svc-clusterip/service.yml
apiVersion: v1
kind: Namespace
metadata:
  name: devops

---

apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: devops
spec:
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  - port: 50000
    targetPort: 50000
    name: agent
  selector:
    app: jenkins
